Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-133945

Qt::ExpandedClientAreaHint results in wrong color for close button on Windows

    XMLWordPrintable

Details

    • Windows
    • b24b9bba6 (dev), ef2731cfc (6.9)

    Description

      Ours:

      Windows default

      Attachments

        1. image-2025-02-20-12-51-52-904.png
          58 kB
          Tor Arne Vestbø
        2. image-2025-02-20-12-52-17-336.png
          49 kB
          Tor Arne Vestbø

        Issue Links

          For Gerrit Dashboard: QTBUG-133945
          # Subject Branch Project Status CR V

          Activity

            People

              owolff Oliver Wolff
              vestbo Tor Arne Vestbø
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes