WindowsQPA: Adjust close button and hover color for custom titlebar

Adjust toe color of the close button to match the native color. Adjust
the hover text color for the close in light mode to match the native
behavior.

Fixes: QTBUG-133945
Change-Id: I2c9fafba9fee65f45f3878168b67b0d0a4b2a54c
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit b24b9bba68821d4abb905d434e4b9442c65ff0c6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>